feat: update Tomcat Dockerfile and recommendations to use JDK 26, remove stale functions, and improve build process